# PdfTableExtraction

./: .env.example  .gitignore  GITHUB_PUBLISH.md  PROMPTS_DOCUMENTATION.md  PROMPT_ENGINEERING.md  PROMPT_LOGIC_AND_INFERENCE.md  QUICKSTART.md  README.md  README_WEB.md  TRANSFORMATION_SUMMARY.md  app.py  pyproject.toml  requirements.txt  run_app.ps1
.streamlit/: config.toml
src/pdf_table_extraction/: __init__.py  app.py  cli.py  config.py  llm_client.py  llm_services.py  models.py  pdf_extractor.py  pipeline.py  utils.py
src/pdf_table_extraction/prompts/: normalization_prompt.txt  normalization_prompt_compact.txt  validation_prompt.txt  validation_prompt_compact.txt
