[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-table-extraction"
version = "0.1.0"
description = "LLM-driven PDF table extraction and normalization pipeline"
readme = "README.md"
authors = [{name = "ML Intern"}]
requires-python = ">=3.10"
dependencies = [
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "pandas>=2.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "groq>=0.8.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "loguru>=0.7.2",
    "streamlit>=1.32.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
